quick fix notebook z-index

--- a/src/css/notebook.sass
+++ b/src/css/notebook.sass
@@ -9,7 +9,7 @@ $desktop: "(min-width: 1200px)"
   height: 100vh
   top: 0
   left: 110vw
-  z-index: 200
+  z-index: 5000
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)
   transition: 0.5s all
   @media #{$tablet}
